# GenesysSDK

./: .gitignore  Pipfile  README.md  pyproject.toml
genesys_sdk/: api_client.py  auth.py  configuration.py  errors.py  logger.py  region.py
genesys_sdk/api/: base_api.py  conversation_api.py  recording_api.py
genesys_sdk/models/call/: call_conversation.py  call_media_participant.py  disposition.py  disposition_parameters.py  fax_status.py
genesys_sdk/models/common/: addressable_entity_ref.py  conversation_division_membership.py  conversation_routing_data.py  error_info.py  journey_context.py  scored_agent.py  transfer_response.py  wrapup.py
genesys_sdk/models/conversation/: aggregation_result.py  analytics_conversation_query_response.py  analytics_conversation_segment.py  analytics_conversation_without_attributes.py  analytics_participant_without_attributes.py  analytics_session.py
genesys_sdk/models/division/: __init__.py  division.py
genesys_sdk/models/domain/: __init__.py  domain.py
genesys_sdk/models/email/: attachment.py  email_address.py  email_conversation.py  email_media_participant.py  email_message.py  email_message_listing.py
genesys_sdk/models/error/: __init__.py  error.py
genesys_sdk/models/query/: numeric_range.py
genesys_sdk/models/queue/: __init__.py
genesys_sdk/models/recording/: annotation.py  media_result.py  recording.py  recording_metadata.py
genesys_sdk/models/skill/: __init__.py  routing_skill.py
genesys_sdk/models/wrapup/: wrapup_code.py
genesys_sdk/request/: paging.py
genesys_sdk/utils/: interval.py
(+4 files in other folders)
