[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genesys_sdk"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "simple_sdk>=0.1.2",
    "pyserde"
]

[tool.setuptools.packages.find]
include = ["genesys_sdk*"]
exclude = ["tests*"]
